--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=3000
-REDIS_URL=redis://127.0.0.1:6379
-API_KEY=changeme
+REDIS_URL=redis-14458.c61.us-east-1-3.ec2.redns.redis-cloud.com:14458
+API_KEY=Jk9#3LpQ8!zT7@xV2
 MEDIA_DIR=./media
